tests/integration/records/errors/quantified-constraints/main.cx
fun g(a: {...: String}) {
}

fun f(a: {y: Number, ...: String}) {
  g(a)
}

fun main() {}
